[package]
name = "leaves_bm"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.16.0", features = ["dynamic_linking"] }
bytemuck = "1.23.2"
emath = "0.30.0"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
