[package]
name = "leaves_bm"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.16.0" }
bevy-inspector-egui = { version = "0.33.1", default-features = false, features = ["bevy_core_pipeline", "bevy_render"] }
bevy_egui = "0.36.0"
bevy_render = "0.16.1"
bevy_window = "0.16.1"
bytemuck = "1.23.2"
egui = "0.32.1"
egui_dock = "0.17.0"
emath = "0.30.0"
rand = { version = "0.9.2", default-features = false, features = ["small_rng"] }

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
